mix feign + kafka

--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -9,6 +9,7 @@ event:
   movie:
     exist: movie.exist
     updateRating: movie-rating.update
+    updateEpisodeView: movie-episode-view.update
   user:
     exist: user.exist
     updateExp: user-exp.update
