--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -35,6 +35,10 @@ spring:
           uri: ${CAMPAIGN_SERVICE_URL}
           predicates:
             - Path=/campaigns/**, /providers/**
+        - id: activity-service
+          uri: ${ACTIVITY_SERVICE_URL}
+          predicates:
+            - Path=/activities/**
 
 server:
   port: ${SERVER_PORT}
