--- a/campaign-service/src/main/resources/application.yml
+++ b/campaign-service/src/main/resources/application.yml
@@ -55,7 +55,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus
+        include: prometheus,health
 
 eureka:
   client:
