--- a/cron-service/src/main/resources/application.yml
+++ b/cron-service/src/main/resources/application.yml
@@ -39,7 +39,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus
+        include: prometheus,health
 
 eureka:
   client:
